--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <!-- INFORAMÇÕES -->
             <div class="product-info">
                 <p class="product-path">
-                    <i class="fasfa-chevron-right"></i>
-                    Tecnoligia / Fones / Sem fio
+                    <i class="fas fa-chevron-right"></i>
+                    Tecnologia / Fones / Sem fio
                 </p>
                 <h2>Fone de ouvido Bluetooth Preto</h2>
                 <p class="product-code">Código do Produto: 98765XYZ</p>
