--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
                 <div class="buttons">
                     <button class="add-to-cart">
-                        <i class="fas-fa-shopping-cart"></i>
+                        <i class="fas fa-shopping-cart"></i>
                         Adicionar ao carrinho
                     </button>
 
