--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     </button>
                 </div><!--buttons-->
                 <p class="delivery">
-                    <i class="fas-fa-truck"></i>
+                    <i class="fas fa-truck"></i>
                     Estimativa de Entrega: Consulte nossos termos de condições
                 </p>
             </div><!--product-info-->
