--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             <!-- Imagem -->
             <div class="product-gallery">
                 <img src="img/fone_destaque.png" alt="Fone de ouvido">
-                <div class="galerry-thubnails">
+                <div class="galerry-thumbnails">
                     <img src="img/fone1.png" alt="Fone de ouvido">
                     <img src="img/fone2.png" alt="Fone de ouvido">
                     <img src="img/fone3.png" alt="Fone de ouvido">
-                </div><!--galerry-thubnails-->
+                </div><!--galerry-thumbnails-->
             </div><!--product-gallery-->
 
             <!-- INFORAMÇÕES -->
@@ -92,7 +92,7 @@
                     </button>
 
                     <button class="add-to-wishlist">
-                        <i class="fas-fa-heart"></i>
+                        <i class="fas fa-heart"></i>
                         Adicionar à lista de desejos
                     </button>
                 </div><!--buttons-->
