--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </div><!--galerry-thumbnails-->
             </div><!--product-gallery-->
 
-            <!-- INFORAMÇÕES -->
+            <!-- INFORMAÇÕES -->
             <div class="product-info">
                 <p class="product-path">
                     <i class="fas fa-chevron-right"></i>
